# Tweak

./: .gitignore  BRUGERVEJLEDNING.md  BUILD_INSTRUCTIONS.md  CMakeLists.txt  PC_Tweaks.spec  PROJECT_SUMMARY.md  README.md  build.bat  build.sh  hardware_detector.py  license.conf.example  main.py  requirements.txt  run.bat  test_system.py  tweaks_database.py
.github/workflows/: build.yml
installer/: setup.iss
qml/: BoostPage.qml  CategoryFilter.qml  CircularGauge.qml  Cs2PathDialog.qml  DashboardPage.qml  GameBenchmarkPage.qml  GameProfileCard.qml  HardwarePanel.qml  Main.qml  PerformanceGraph.qml  QuickActionsPanel.qml  ScoreCard.qml  SettingsPage.qml  Sidebar.qml  StartupPanel.qml  StatCard.qml  TweakCard.qml  TweaksPage.qml
scripts/: package.bat
src/: main.cpp
src/app/: AppController.cpp  AppController.h  BenchmarkEngine.cpp  BenchmarkEngine.h  ConfigManager.cpp  ConfigManager.h  GameBenchmark.cpp  GameBenchmark.h  HardwareDetector.cpp  HardwareDetector.h  HardwareScorer.cpp  HardwareScorer.h  LicenseManager.cpp  LicenseManager.h  PowerUtil.cpp  PowerUtil.h  RegistryUtil.cpp  RegistryUtil.h  SettingsManager.cpp  SettingsManager.h  StartupScanner.cpp  StartupScanner.h  SystemMonitor.cpp  SystemMonitor.h  TweakEngine.cpp  TweakEngine.h  TweakListModel.cpp  TweakListModel.h  UacHelper.cpp  UacHelper.h  WebBridge.cpp  WebBridge.h
tools/: generate_icon.py  keygen.py
web/: index.html
